docs: fix overflow preventing sticky header

--- a/src/docs/assets/main.scss
+++ b/src/docs/assets/main.scss
@@ -37,11 +37,3 @@ body {
   transform-origin: center;
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--background-primary);
-  color: var(--text-primary);
-  min-height: 100vh;
-  overflow: auto;
-}
